// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowRightIcon matches snapshot with custom className 1`] = `
<div>
  <svg
    class="custom-class"
    data-testid="arrow-right-icon"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`ArrowRightIcon matches snapshot with custom size as number 1`] = `
<div>
  <svg
    data-testid="arrow-right-icon"
    height="32px"
    viewBox="0 0 24 24"
    width="32px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`ArrowRightIcon matches snapshot with custom size as string 1`] = `
<div>
  <svg
    data-testid="arrow-right-icon"
    height="48px"
    viewBox="0 0 24 24"
    width="48px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`ArrowRightIcon matches snapshot with default props 1`] = `
<div>
  <svg
    data-testid="arrow-right-icon"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="0"
    />
  </svg>
</div>
`;
